--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "aiosmtplib>=4.0.2",
     "email-validator>=2.3.0",
     "mnemonic>=0.21",
+    "httpx>=0.28.1",
+    "pydantic-settings>=2.11.0",
 ]
 
 [dependency-groups]
