--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fastapi-email-auth"
-version = "0.1.0"
-description = "Email-based passwordless authentication for FastAPI"
+version = "0.1.0a1"
+description = "Email-based passwordless authentication for FastAPI (Alpha)"
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "MIT" }
