--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dev = [
     "ruff>=0.13.0",
     "mypy>=1.18.0",
     "pytest-cov>=6.0.0",
+    "build>=1.3.0",
+    "twine>=6.2.0",
 ]
 
 [project.urls]
